crates/tools/tests/tools/snapshots/tools__fill_missing__fails_when_no_mirror_has_a_day.snap
---
source: tests/tools/fill_missing.rs
expression: "format!(\"{error:#}\\n---\\n{}\", test_db.messages().await)"
---
1 days are still missing
---
2026-03-02 06:15:00.000 00000000-0000-4000-8000-000000000006 #testchan(11111) bob(33333) "Bob" color=None badges=[]: good morning
