crates/tools/tests/tools/snapshots/tools__fill_missing__imports_missing_days_only.snap
---
source: tests/tools/fill_missing.rs
expression: test_db.messages().await
---
2026-03-01 07:00:00.000 00000000-0000-4000-8000-000000000001 #testchan(11111) alice(22222) "Alice" color=None badges=[]: hello
2026-03-02 06:15:00.000 00000000-0000-4000-8000-000000000006 #testchan(11111) bob(33333) "Bob" color=None badges=[]: good morning
